# computational-physics

./: CMakeLists.txt  README.md
project/: CMakeLists.txt
project/src/: metropolisEquilibrium.cpp  metropolisMethod.cpp  semiclassicalQuantizationLJ-GSL.cpp  semiclassicalQuantizationLJ.cpp  semiclassicalQuantizationMorse.cpp
reports/hw1/: hw1.aux  hw1.fdb_latexmk  hw1.fls  hw1.tex
reports/hw2/: hw2.aux  hw2.fdb_latexmk  hw2.fls  hw2.tex
reports/hw3/: hw3.tex
src/: CMakeLists.txt  schrodingerEquation1D-Numerov.cpp  semiclassicalQuantizationMorse.cpp
src/src/: inversionMethod.cpp  rejectionMethod.cpp  semiclassicalQuantizationLJ.cpp
